# glade_app

./: Makefile  README.md  config.status  configure  project4.glade
autom4te.cache/: output.1  requests
backend/: makefile
integrated/: FINAL_SUMMARY.txt  GRAPHIQUES_DYNAMIQUES.md  GRAPHIQUES_IMPLEMENTATION.md  GUIDE_COACH_MANAGEMENT.md  GUIDE_EXPORT_PDF.md  GUIDE_FINAL_STATS.md  GUIDE_MEMBER_MANAGEMENT.md  GUIDE_SMART_ADVICE.md  GUIDE_STATS_SAVE.md  Makefile  PLAN_STATS_ADVANCED.md  RAPPORT_TECHNIQUE_UI.md  README.md  TEST_EXPORT_PDF.md  activity_log.txt  analyse_project.md  build_log.txt  coach_management_new.xml  coachs.txt  error_log.txt  integrated_app  member_statistics.txt  members.txt  run_log.txt
integrated/emna/: Makefile  config.h  configure.in  frontend.glade  project4.glade  project4.glade.bak  project4.gladep
integrated/emna/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  coachs.txt  interface.h  main.c  t--l--chargements
integrated/emna/src/.deps/: callbacks.Po  entrain.Po
integrated/isra/: config.status  project4.glade
integrated/src/: Member.c  Member.h  callbacks.c  callbacks.h  callbacks_emna.h  dashboard.c  emna_callbacks.c  entrain.c  glade_shims.c  interface.c  interface.h  isra_callbacks.c  main.c  memberstats.c  memberstats.h  stats_graphics.c  stats_graphics.h  support.c  support.h  ui_registry.c  ui_registry.h
integrated/ui/: dashboard.ui  (+4 more)
po/: Makefile
src/: Makefile  Makefile.in  Member.c  entrain.c  entrain.h  interface.c  interface.c.bak  interface.h.bak  members.txt  memberstats.h  memberstats.txt
(+16 files in other folders)
